--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,7 +9,8 @@ title = "Ivan Franco"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://ifranco.github.io/"
+baseurl = "/"
+# baseurl = "https://ifranco.github.io/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
